digital signature signing and verification works via client cpi. web gui supports verification of signatures on all elements, but only signing on business and services at this time. adding fix for expired token exception from the trunk, all gui functions support expiring tokens now many ui enhancements and bug fixes. binding template keys are now correctly persisted operational info works on all elements, tmodel/deleted is now persisted correct
git-svn-id: https://svn.apache.org/repos/asf/juddi/branches/juddi-3.2.x@1467689 13f79535-47bb-0310-9956-ffa450edef68