@@ -27,3 +27,7 @@ mvn install -DskipTests=true
 To also build the Pluto/GWT/Portlet interface
 cd juddi-console
 mvn clean install
+
+To start Juddi's embedded Tomcat server:
+juddi-tomcat\target\tomcat\apache-tomcat-6.0.26\bin\startup.bat -XX:MaxPermSize=128m
+juddi-tomcat\target\tomcat\apache-tomcat-6.0.26\bin\startup.sh -XX:MaxPermSize=128m
